--- a/index.html
+++ b/index.html
@@ -20,6 +20,22 @@
         canvas {
             background-color: #000000;
         }
+        
+        @media (min-width: 600px) {
+            h1 {
+                font-size: 2.5em;
+            }
+
+            input[type="text"],
+            button,
+            #mensaje {
+                font-size: 1em;
+            }
+
+            button {
+                width: auto;
+            }
+        }
     </style>
 </body>
 </html>
