--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <canvas id="canvas" width="800" height="400" style="border:1px solid #ffffff;"></canvas>
+    <div>
+        <h1 id="player">0</h1>
+        <h1 id="computer">0</h1>
+    </div>
     <style>
         body {
             display: flex;
