--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
         <h1 id="computer">0</h1>
     </div>
     <style>
+        .player{
+            color:white;
+        }
+        .computer{
+            color:white;
+        }
         body {
             display: flex;
             justify-content: center;
