--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
 </head>
 <body>
     <canvas id="canvas" width="800" height="400" style="border:1px solid #ffffff;"></canvas>
+    <div>
+        <h1 id="puntuacion">0</h1>
+        <h1 id="puntuacion2">0</h1>
+    </div>
     <style>
+        body>div{
+            display:flex;
+            justify-content: space-between;
+            width:500px;
+            color:white;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
         body {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
