--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     
     <style>
         body>div{
+            font-size: 50px;
             display:flex;
             justify-content: space-between;
             width:500px;
